# gcj-rectify

./: .gitignore  README.md  justfile  pyproject.toml
gcj_rectify_plugin/: __init__.py  metadata.txt  plugin.py  qgis_utils.py  server.py
gcj_rectify_server/: __init__.py  cache.py  fetch.py  index.html  main.py  maps.json  rectify.py  transform.py  utils.py  wmts.xml
gcj_rectify_server/static/: app.js  index.html  style.css
scripts/: pack_plugin.py
