[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gcj_rectify_server"]


[project]
name = "gcj-rectify"
# version = "0.1.0"
authors = [{ name = "liuxspro", email = "liuxspro@gmail.com" }]
maintainers = [{ name = "liuxspro", email = "liuxspro@gmail.com" }]
description = "GCJ Rectify Server"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.95.0",
    "httpx>=0.24.0",
    "pillow>=10.0.0",
    "uvicorn>=0.20.0",
]
dynamic = ["version"]


[project.scripts]
gcj-rectify = "gcj_rectify_server.main:run"

[tool.hatch.version]
path = "gcj_rectify_server/__init__.py"
